--- a/templates/starmap.html
+++ b/templates/starmap.html
@@ -116,6 +116,30 @@
                                 </button>
                             </div>
                         </div>
+                        
+                        <div class="border-top pt-3">
+                            <h6 class="text-info">Galactic Directions</h6>
+                            <div class="mb-2">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="galacticDirections" onchange="toggleGalacticDirections()">
+                                    <label class="form-check-label" for="galacticDirections">
+                                        Show Cardinal Directions
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="galacticGrid" onchange="toggleGalacticGrid()">
+                                    <label class="form-check-label" for="galacticGrid">
+                                        Show Galactic Grid
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <label for="galacticDistance" class="form-label">Distance (parsecs): <span id="galacticDistanceValue">50</span></label>
+                                <input type="range" class="form-range" id="galacticDistance" min="25" max="100" value="50" oninput="updateGalacticDistance()">
+                            </div>
+                        </div>
                     </div>
                 </div>
 
